Fix _Sidebar -> _TableOfContents

--- a/src/uLearn.Web/Views/Analytics/PersonalStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/PersonalStatistics.cshtml
@@ -3,7 +3,7 @@
 @{
 	ViewBag.Title = "Personal statistics";
 }
-@Html.Partial("_Sidebar", Model.CoursePageModel)
+@Html.Partial("_TableOfContents", Model.CoursePageModel)
 
 <body>
 	<div class="slide-container">
