--- a/src/uLearn.Web/Views/Analytics/TotalStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/TotalStatistics.cshtml
@@ -6,7 +6,7 @@
 	ViewBag.Title = "Total statistics";
 }
 
-@Html.Partial("_Sidebar", Model.CoursePageModel)
+@Html.Partial("_TableOfContents", Model.CoursePageModel)
 
 <body>
 	<div class="slide-container">
