--- a/src/uLearn.Web/Views/Course/AcceptedSolutions.cshtml
+++ b/src/uLearn.Web/Views/Course/AcceptedSolutions.cshtml
@@ -3,7 +3,7 @@
 @{
 	ViewBag.Title = Model.CoursePageModel.Course.Title;
 }
-@Html.Partial("_Sidebar", Model.CoursePageModel)
+@Html.Partial("_TableOfContents", Model.CoursePageModel)
 <div class="slide-container">
 	<div class="container body-content">
 		<div class="row">
