--- a/src/uLearn.Web/Views/Analytics/UsersStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UsersStatistics.cshtml
@@ -4,7 +4,7 @@
 	ViewBag.Title = "Users statistics";
 }
 
-@Html.Partial("_Sidebar", Model.CoursePageModel)
+@Html.Partial("_TableOfContents", Model.CoursePageModel)
 
 <body>
 	<div class="slide-container">
