--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -321,3 +321,11 @@ table.diff tbody th {
 .navs {
     margin-top: -21px;
 }
+
+.quiz {
+    
+}
+
+.wrong-quiz {
+    background-color: lightcoral;
+}
