--- a/src/uLearn.Web/Views/Course/_Quiz.cshtml
+++ b/src/uLearn.Web/Views/Course/_Quiz.cshtml
@@ -4,22 +4,30 @@
 @{ var QuizSlide = Model.Slide as QuizSlide;}
 @if (QuizSlide != null)
 {
-	foreach (var quizBlock in QuizSlide.Quiz.Blocks)
-	{
-		<p>@Html.Raw(quizBlock.Text)</p>
+    for (int blockIndex = 0; blockIndex < QuizSlide.Quiz.Blocks.Length; blockIndex++)
+    {
+        var quizBlock = QuizSlide.Quiz.Blocks[blockIndex];
+        <p>@Html.Raw(quizBlock.Text)</p>
 
 		if (quizBlock is ChoiceBlock)
 		{
-			<ul>
-				@foreach (var var in (quizBlock as ChoiceBlock).Items)
-				{
-					<li><input type="radio">@var.Description</li>
-				}
-			</ul>
+			var choiceQuizBlock = quizBlock as ChoiceBlock;
+		    var isMultiply = choiceQuizBlock.Multiple;
+				<ul id='@(quizBlock.Id + "_quizBlock")'>
+					@for (int itemIndex = 0; itemIndex < choiceQuizBlock.Items.Length; itemIndex++)
+					{
+					    var ident = isMultiply ? blockIndex.ToString() : itemIndex + "noMult";
+						var var = choiceQuizBlock.Items[itemIndex];
+					    <li><input name=@("group"+ident) class="quiz" id='@(blockIndex + "_" + itemIndex + "_quizItem")' type="radio">@var.Description</li>
+					}
+				</ul>
 		}
-	}
-    <div id="quizGet" data-url="lol"></div>
-    <div id="quizSub" data-url="lol2">
-    <button>Submit my result</button>
-</div>
+		else if (quizBlock is FillInBlock)
+		{
+                @:<input class="quiz"  id='@(blockIndex + "_" + "placetoinsert" + "_quizItem")'>
+            }		
+    }
+    <div id="quizSub">
+        <button onclick="submitQuiz('@Model.Course.Id','@Model.SlideIndex')">Submit my result</button>
+    </div>
 }
