--- a/src/uLearn.Web/Views/Course/_Quiz.cshtml
+++ b/src/uLearn.Web/Views/Course/_Quiz.cshtml
@@ -4,30 +4,38 @@
 @{ var QuizSlide = Model.Slide as QuizSlide;}
 @if (QuizSlide != null)
 {
-    for (int blockIndex = 0; blockIndex < QuizSlide.Quiz.Blocks.Length; blockIndex++)
-    {
-        var quizBlock = QuizSlide.Quiz.Blocks[blockIndex];
-        <p>@Html.Raw(quizBlock.Text)</p>
+	for (int blockIndex = 0; blockIndex < QuizSlide.Quiz.Blocks.Length; blockIndex++)
+	{
+		var quizBlock = QuizSlide.Quiz.Blocks[blockIndex];
+		<p>@Html.Raw(quizBlock.Text)</p>
 
 		if (quizBlock is ChoiceBlock)
 		{
 			var choiceQuizBlock = quizBlock as ChoiceBlock;
-		    var isMultiply = choiceQuizBlock.Multiple;
-				<ul id='@(quizBlock.Id + "_quizBlock")'>
-					@for (int itemIndex = 0; itemIndex < choiceQuizBlock.Items.Length; itemIndex++)
-					{
-					    var ident = !isMultiply ? blockIndex.ToString() : itemIndex + "noMult";
-						var var = choiceQuizBlock.Items[itemIndex];
-					    <li><input name=@("group"+ident) class="quiz" id='@(blockIndex + "_" + itemIndex + "_quizItem")' type="radio">@var.Description</li>
-					}
-				</ul>
+			var isMultiply = choiceQuizBlock.Multiple;
+			<ul class="quiz" id='@(quizBlock.Id + "_quizBlock")'>
+				@for (int itemIndex = 0; itemIndex < choiceQuizBlock.Items.Length; itemIndex++)
+				{
+					var ident = isMultiply ? itemIndex + "noMult" : blockIndex.ToString();
+					var var = choiceQuizBlock.Items[itemIndex];
+					var typeInp = isMultiply ? "checkbox" : "radio";
+					<li><input name=@("group"+ident) class="quiz" id='@(blockIndex + "_" + itemIndex + "_quizItem")' type="@typeInp">@var.Description</li>
+				}
+			</ul>
 		}
 		else if (quizBlock is FillInBlock)
 		{
-                @:<input class="quiz"  id='@(blockIndex + "_" + "placetoinsert" + "_quizItem")'>
-            }		
-    }
-    <div id="quizSub" data-url='@Url.Action("SubmitQuiz")'>
-        <button onclick="submitQuiz('@Model.Course.Id','@Model.SlideIndex')">Submit my result</button>
-    </div>
+			@:<input class="quiz" id='@(blockIndex + "_" + "placetoinsert" + "_quizItem")'>
+            }
+		else if (quizBlock is IsTrueBlock)
+		{
+			<ul class="quiz" id="@(quizBlock.Id + "_quizBlock")">
+				<li><input class="quiz" name='@(quizBlock.Id+"group")' id='@(blockIndex + "_" + "True" + "_quizItem")' type="radio">True</li>
+				<li><input class="quiz" name='@(quizBlock.Id+"group")' id='@(blockIndex + "_" + "False" + "_quizItem")' type="radio">False</li>
+			</ul>
+		}
+	}
+	<div id="quizSub" data-url='@Url.Action("SubmitQuiz")'>
+		<button onclick="submitQuiz('@Model.Course.Id','@Model.SlideIndex')">Submit my result</button>
+	</div>
 }
