--- a/src/uLearn.Web/Views/Shared/_TableOfContents.cshtml
+++ b/src/uLearn.Web/Views/Shared/_TableOfContents.cshtml
@@ -1,4 +1,5 @@
-﻿@using uLearn
+﻿@using Elmah.ContentSyndication
+@using uLearn
 @model CoursePageModel
  
 <ul class="side-bar units-list">
@@ -34,7 +35,11 @@
 						{
 							if (slide is ExerciseSlide)
 							{
-								itemClass = Model.SolvedSlide.Contains(slide.Id) ? "glyphicon glyphicon-edit navbar-label-success" : "glyphicon glyphicon-edit navbar-label-danger";
+								itemClass = Model.SolvedSlide.Contains(slide.Id) ? "glyphicon glyphicon-check navbar-label-success" : "glyphicon glyphicon-edit navbar-label-danger";
+							}
+							else if (slide is QuizSlide)
+							{
+								itemClass = Model.IsPassedQuiz ? "glyphicon glyphicon-pushpin navbar-label-success" : "glyphicon glyphicon-pushpin navbar-label-danger";
 							}
 							else
 							{
@@ -46,6 +51,10 @@
 							if (slide is ExerciseSlide)
 							{
 								itemClass = "glyphicon glyphicon-edit navbar-label-default";
+							}
+							if (slide is QuizSlide)
+							{
+								itemClass = "glyphicon glyphicon-pushpin navbar-label-default";
 							}
 						}
 						<i class="@itemClass navbar-label"></i>
