--- a/src/uLearn.Web/Views/Course/_SlideNavigation.cshtml
+++ b/src/uLearn.Web/Views/Course/_SlideNavigation.cshtml
@@ -1,6 +1,6 @@
 ﻿@model uLearn.CoursePageModel
 
-<div class="btn-group" style="width:100%" id="nav_arrows" data-hasnext="@(Model.HasNextSlide?"true":"")" data-hasprev="@(Model.HasPrevSlide?"true":"")">
+<div class="btn-group" style="width:100%" id="nav_arrows" data-hasnext="@(Model.HasNextSlide?"true":"")" data-hasprev="@(Model.HasPrevSlide?"true":"")" data-isaccepted="@((Model.IsPassedTask&&!Model.IsSlideWithAcceptedSolutions)?"true":"")">
     <a class="btn btn-default btn-hover no-rounds" style="width:50%" id="prev_slide_button" href="@Url.Action("Slide", new {courseId = Model.Course.Id, slideIndex = Model.PrevSlideIndex})"><i class="glyphicon glyphicon-chevron-left"></i></a>
     <a class="btn btn-default btn-hover no-rounds" style="width:50%" id="next_solutions_button" href="@Url.Action("AcceptedSolutions", new { courseId = Model.Course.Id, slideIndex = Model.SlideIndex })"><i class="glyphicon glyphicon-chevron-right"></i></a>
     <a class="btn btn-default btn-hover block-next no-rounds" style="width:50%" id="next_slide_button" href="@Url.Action("Slide", new {courseId = Model.Course.Id, slideIndex = Model.NextSlideIndex})"><i class="glyphicon glyphicon-chevron-right"></i></a>
