Design and texts

--- a/src/uLearn.Web/Views/Home/Index.cshtml
+++ b/src/uLearn.Web/Views/Home/Index.cshtml
@@ -9,18 +9,25 @@
 
 	<div class="row">
 		<div class="col-md-6">
+			<h2>Практикум по языку запросов LINQ</h2>
+			<p>
+				Длительность курса: 2-4 часа.
+			<p>
+				Вы познакомитесь с основами LINQ
+				на серии тщательно подобранных практических
+				примерах применения этой технологии.
+			</p>
+			<p>
+				Курс будет полезен, даже если вы уже поверхностно знакомы с LINQ.
+			</p>
+			<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Linq" }, null)</p>
+		</div>
+		<div class="col-md-6">
 			<h2>Основы программирования на C#</h2>
 			<p>
 				[В процессе разработки]
 			</p>
 			<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming" }, null)</p>
-		</div>
-		<div class="col-md-6">
-			<h2>Практикум по LINQ</h2>
-			<p>
-				Множество практических примеров использования Linq запросов.
-			</p>
-			<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Linq" }, null)</p>
 		</div>
 	</div>
 </div>
