Slides with video. Fix bug in BlocksBuilder. Add orphus. Update Readme.md about slide class interpretation.

--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -33,5 +33,9 @@
 	@Scripts.Render("~/bootstrap-js")
 	@Scripts.Render("~/codemirror-js")
 	@RenderSection("scripts", required: false)
+	
+	<script type="text/javascript" src="/Orphus/orphus.js"></script>
+	<a href="http://orphus.ru" id="orphus" target="_blank"><img alt="Система Orphus" src="/orphus/orphus.gif" border="0" width="0" height="0" /></a>
+
 </body>
 </html>
