hint-likes + some beautiful things in analytics

--- a/src/uLearn.Web/Views/Analytics/UsersStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UsersStatistics.cshtml
@@ -25,7 +25,7 @@
 						@foreach (var user in Model.UserStats)
 						{
 							<tr>
-								<td>@user.Key</td>
+								<td><h6>@user.Key</h6></td>
 								@foreach (var unitName in Model.UnitNamesInOrdered)
 								{
 									<td>@(user.Value[unitName] + "%")</td>
