--- a/src/uLearn.Web/Views/Analytics/TotalStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/TotalStatistics.cshtml
@@ -32,10 +32,15 @@
 						{
 							counter++;
 						    <tr>
-						        @{var isNeedDrowHintsInfo = (info.Value.IsExercise && info.Value.TotalHintCount != 0);}
-						        <td data-sort-value=@(counter + 1000)>@Html.ActionLink(info.Key, "Slide", "Course", new { courseId = Model.CoursePageModel.Course.Id, slideIndex = counter }, null)</td>
+						        @{
+							        var isNeedDrowHintsInfo = (info.Value.IsExercise && info.Value.TotalHintCount != 0);
+							        var url = Url.Action("Slide", "Course", new {courseId = Model.CoursePageModel.Course.Id, slideIndex = counter}, null);
+						        }
+								<td class="slide-list-item" data-sort-value=@(counter + 1000) onclick="window.location.href='@url'"><h6 style="color: #428bca">@info.Key</h6></td>
 						        <td>@info.Value.VisitersCount</td>
-						        <td>@(info.Value.IsExercise ? info.Value.SolversCount.ToString(CultureInfo.InvariantCulture) : "")</td>
+							    <td data-sort-value=@(info.Value.IsExercise ? info.Value.SolversCount+1000 : 0)>
+								    @(info.Value.IsExercise ? info.Value.SolversCount.ToString(CultureInfo.InvariantCulture) : "")
+							    </td>
 								<td>@info.Value.Rates.Count</td>
 								<td>@(info.Value.Rates.Count == 0 ? 0 : (int)(100 * (double)info.Value.Rates.Good / info.Value.Rates.Count))%</td>
 								<td>@(info.Value.Rates.Count == 0 ? 0 : (int)(100 * (double)info.Value.Rates.NotUnderstand / info.Value.Rates.Count))%</td>
