--- a/src/uLearn.Web/Views/Course/_ExerciseHints.cshtml
+++ b/src/uLearn.Web/Views/Course/_ExerciseHints.cshtml
@@ -13,7 +13,7 @@
 			<i class="glyphicon glyphicon-thumbs-up"></i>
 		</button>
 		<div>
-			<li>@Html.Raw(hintHtml)</li>
+			<li style="margin-bottom: 20px">@Html.Raw(hintHtml)</li>
 		</div>
 	</div>
 }
