--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -280,29 +280,36 @@ table.diff tbody th {
 .block-next {
     color: gray;
     background-color: aliceblue;
+    margin-left: 0 !important;
 }
 
 .free-next {
     color: black;
     background-color: white;
+    margin-left: 0 !important;
 }
 
 .solution-control {
     width: 100%;
     margin-top: -20px;
+    margin-left: 0 !important;
 }
 
 .reset-btn {
     width: 25%;
+    margin-left: 0 !important;
 }
 
 .hints-btn {
     width: 25%;
+    margin-left: 0 !important;
+    float: right !important;
 }
 
 .run-solution-button {
     width: 50%;
     margin-bottom: 10px;
+    margin-left: 0 !important;
 }
 
 .not-watched {
@@ -316,10 +323,16 @@ table.diff tbody th {
 .rates-bar {
     width: 100%;
     margin-bottom: -11px;
+    margin-left: 0 !important;
 }
 
 .navs {
     margin-top: -21px;
+    margin-left: 0 !important;
+}
+
+.ctrl-group {
+    margin-left: 0 !important;
 }
 
 .quiz {
@@ -339,5 +352,17 @@ table.diff tbody th {
 }
 
 .false {
+    
+}
+
+.answered {
+    
+}
+
+.quiz-block-mark {
+    
+}
+
+.quiz-block-input {
     
 }
