fixes for pixels and alpha focus

--- a/src/uLearn.Web/Views/Course/_RatesBar.cshtml
+++ b/src/uLearn.Web/Views/Course/_RatesBar.cshtml
@@ -10,7 +10,7 @@
 			<input id="good" type="radio" name="marks" value="good" checked>
 			Понятно
 		</label>
-		<label style="width:34%" onclick="handleRate('Trivial')" class="btn btn-default no-rounds ctrl-group" data-hover-class="btn-info">
+	    <label style="width:34%; float:right" onclick="handleRate('Trivial')" class="btn btn-default no-rounds ctrl-group" data-hover-class="btn-info">
 			<input id="trivial" type="radio" name="marks" value="trivial">
 			Тривиально
 		</label>
