hide-sidebar-betta

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -329,3 +329,8 @@ table.diff tbody th {
 .wrong-quiz {
     background-color: lightcoral;
 }
+
+.hide-side-bar-icon {
+	color: white;
+	background-color: black;
+}
