--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
 </head>
 <body>
 	<div class="navbar navbar-inverse navbar-fixed-top">
+		<script src="/Scripts/slide-tableOfContent.js"></script>
+		<button style="float: left" onclick='hideTable()'><i class="glyphicon glyphicon-align-justify hide-side-bar-icon"></i></button>
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
