--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -10,7 +10,11 @@
 <body>
 	<div class="navbar navbar-inverse navbar-fixed-top">
 		<script src="/Scripts/slide-tableOfContent.js"></script>
-		<button style="float: left" onclick='hideTable()'><i class="glyphicon glyphicon-align-justify hide-side-bar-icon"></i></button>
+		<button type="button" class="navbar-toggle hide-side-bar-button" onclick="hideTable()">
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
