icon: thumbs-up → heart hint: make button smaller

--- a/src/uLearn.Web/Views/Course/AcceptedSolutions.cshtml
+++ b/src/uLearn.Web/Views/Course/AcceptedSolutions.cshtml
@@ -14,7 +14,7 @@
 				var id = "solution_" + solution.Id;
 				<div id="@id">
 					<button class="like-left-location btn @(solution.LikedAlready ? "btn-primary" : "btn-default") like-button" onclick="likeSolution(@solution.Id)">
-						<i class="glyphicon glyphicon-thumbs-up"></i>
+						<i class="glyphicon glyphicon-heart"></i>
 						<span class="likes-counter">@solution.UsersWhoLike.Count</span>
 					</button>
 					<textarea class='code code-sample'>@solution.Code</textarea>
