--- a/src/uLearn.Web/Views/Course/_Quiz.cshtml
+++ b/src/uLearn.Web/Views/Course/_Quiz.cshtml
@@ -1,10 +1,12 @@
-﻿@using uLearn
+﻿@using System.Text
+@using uLearn
 @using uLearn.Quizes
 @model CoursePageModel
 @{ var QuizSlide = Model.Slide as QuizSlide;}
 @if (QuizSlide != null)
 {
 	var passed = Model.PassedQuiz.Contains(QuizSlide.Id);
+    var rightAnswersStr = new StringBuilder();
 	for (int blockIndex = 0; blockIndex < QuizSlide.Quiz.Blocks.Length; blockIndex++)
 	{
 		var quizBlock = QuizSlide.Quiz.Blocks[blockIndex];
@@ -27,6 +29,9 @@
 		if (quizBlock is ChoiceBlock)
 		{
 			var choiceQuizBlock = quizBlock as ChoiceBlock;
+			rightAnswersStr.Append(quizBlock.Id + "quizBlock" + "=");
+			rightAnswersStr.Append(string.Join("*",choiceQuizBlock.Items.Where(x => x.IsCorrect).Select(x => x.Id).ToList()));
+			rightAnswersStr.Append("||");
 			var isMultiply = choiceQuizBlock.Multiple;
 			var typeInp = isMultiply ? "checkbox" : "radio";
 			<div class="quiz-block-mark @typeInp" id='@(quizBlock.Id + "_quizBlock")'>
@@ -34,15 +39,20 @@
 				{
 					var ident = isMultiply ? itemIndex + "noMult" : blockIndex.ToString();
 					var var = choiceQuizBlock.Items[itemIndex];
-					var correct = var.IsCorrect ? "true" : "false";
+
 					var ans = "";
-					if (passed && Model.AnswersToQuizes[quizBlock.Id].Contains(var.Id))
+				    var mark = "";
+				    if (passed)
+				    {
+				        mark = var.IsCorrect ? "glyphicon glyphicon-ok right-quiz" : "glyphicon glyphicon-remove wrong-quiz";
+				    }
+				    if (passed && Model.AnswersToQuizes[quizBlock.Id].Contains(var.Id))
 					{
 						ans = "checked";
 					}
 					<div class="quiz">
-						<i class="@correct"></i>
-						<label><input @ans id='@(blockIndex + "_" + itemIndex + "_quizItem")' name=@("group"+ident) type="@typeInp">@var.Description</label>
+					    <i class="@mark"></i>
+						<label><input @ans id='@(quizBlock.Id + "quizBlock" + var.Id)' name=@("group"+ident) type="@typeInp">@var.Description</label>
 					</div>
 				}
 			</div>
@@ -59,13 +69,14 @@
 				quizResSample = Model.AnswersToQuizes[quizBlock.Id][1] == "False" ? "block" : "hidden";
 			}
 			var fillIn = quizBlock as FillInBlock;
+			rightAnswersStr.Append(quizBlock.Id + quizBlock.Id + "=" + fillIn.Sample);
+		    rightAnswersStr.Append("||");
 			var sample = fillIn.Sample;
-
 			<div class="quiz quiz-block-input">
 				<label>
-					<input class="@quizRes" value="@value" id='@(blockIndex + "_" + "placetoinsert" + "_quizItem")'>
+					<input class="@quizRes" value="@value" id='@(quizBlock.Id + "quizBlock")'>
 				</label>
-				<i style="display:@quizResSample" id='@(blockIndex + "_" + "example" + "_quizItem")'>
+				<i style="display:@quizResSample" id='@(quizBlock.Id + "_" + "example" + "_quizItem")'>
 					Пример правильного варианта ответа: @sample
 				</i>
 			</div>
@@ -73,35 +84,39 @@
 		else if (quizBlock is IsTrueBlock)
 		{
 			var selecter = quizBlock as IsTrueBlock;
-			var tr = selecter.Answer ? "true" : "false";
-			var fl = selecter.Answer ? "false" : "true";
+			rightAnswersStr.Append(quizBlock.Id + "quizBlock" + "=" + selecter.Answer);
+			rightAnswersStr.Append("||");
 			var tchecked = "";
 			var fchecked = "";
+		    var markTrue = "";
+		    var markFalse = "";
+			
 			if (passed && Model.AnswersToQuizes[quizBlock.Id].FirstOrDefault() != null)
 			{
+				markTrue = selecter.Answer ? "glyphicon glyphicon-ok right-quiz" : "glyphicon glyphicon-remove wrong-quiz";
+				markFalse = selecter.Answer ? "glyphicon glyphicon-remove wrong-quiz" : "glyphicon glyphicon-ok right-quiz";
 				tchecked = Model.AnswersToQuizes[quizBlock.Id].FirstOrDefault() == "True" ? "checked" : "";
 				fchecked = Model.AnswersToQuizes[quizBlock.Id].FirstOrDefault() == "False" ? "checked" : "";
 			}
 			<div class="radio quiz-block-mark" id="@(quizBlock.Id + "_quizBlock")">
 				<div class="quiz">
-					<i class="@tr"></i>
-					<label><input @tchecked id='@(blockIndex + "_" + "True" + "_quizItem")' name='@(quizBlock.Id+"group")' type="radio">True</label>
+					<i class="@markTrue"></i>
+					<label><input @tchecked id='@(quizBlock.Id + "quizBlock" + "True")' name='@(quizBlock.Id+"group")' type="radio">True</label>
 				</div>
 				<div class="quiz">
-					<i class="@fl"></i>
-					<label><input @fchecked id='@(blockIndex + "_" + "False" + "_quizItem")' name='@(quizBlock.Id+"group")' type="radio">False</label>
+					<i class="@markFalse"></i>
+					<label><input @fchecked id='@(quizBlock.Id + "quizBlock" + "False")' name='@(quizBlock.Id+"group")' type="radio">False</label>
 				</div>
 			</div>
 		}
 	}
 	<div id="quizSub" data-url='@Url.Action("SubmitQuiz")'>
-		<button style="margin-top:10px; margin-bottom:5px;" class="btn btn-default" onclick="submitQuiz('@Model.Course.Id','@Model.SlideIndex','@Model.AnswersToQuizes.Count')">Submit my result</button>
+		<button style="margin-top:10px; margin-bottom:5px;" class="btn btn-default" onclick="submitQuiz('@Model.Course.Id','@Model.SlideIndex','@Model.AnswersToQuizes.Count','@rightAnswersStr.ToString()' )">Submit my result</button>
 		<script src="~/Scripts/slide-quiz.js"></script>
 		<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-		<script> areAllAnswered(5)</script>
 		@if (passed)
 		{
-			<script>markAnswers()</script>
+			<script>markAns('@rightAnswersStr.ToString()')</script>
 		}
 	</div>
 }
