Add start slide. Add titles to icons.

--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -63,6 +63,6 @@
 	@Scripts.Render("~/slide-js")
 	<script src="~/Scripts/slide-stats.js"></script>
 	<script>
-		FillRate('@Model.Rate');
+		fillRate('@Model.Rate');
 	</script>
 }
