--- a/src/uLearn.Web/Views/Course/_ExerciseHints.cshtml
+++ b/src/uLearn.Web/Views/Course/_ExerciseHints.cshtml
@@ -1,23 +1,25 @@
 ﻿@model uLearn.CoursePageModel
 <div class="panel-group ctrl-group" id="hints-accordion">
-    @{ var slide = Model.Slide as uLearn.ExerciseSlide;}
-    <div id="hintsStore" data-url="@Url.Action("GetHint")"></div>
-    @for (int index = 0; index < slide.HintsHtml.Length; index++)
-{
-	var hintHtml = slide.HintsHtml[index];
-	var id = "hint" + index;
-	<div id="@id" data-url="@Url.Action("AddHint")" style="display:none">
-		@{ var intro = index == 0 ? "Подсказки:" : "";}
-		<h4>@intro</h4>
-		<button id="@(index+"likeHint")" class="like-left-location btn btn-xs like-button @(slide.LikedHints.Contains(index) ? "btn-primary" : "btn-default")" data-url="@Url.Action("LikeHint")" onclick="likeHint('@Model.Course.Id', '@Model.Slide.Id', '@index')">
-			<i class="glyphicon glyphicon-thumbs-up"></i>
-		</button>
-		<div>
-			<li style="margin-bottom: 20px">@Html.Raw(hintHtml)</li>
+	@{ var slide = (uLearn.ExerciseSlide)Model.Slide;}
+	<div id="hintsStore" data-url="@Url.Action("GetHint")"></div>
+	@for (int index = 0; index < slide.HintsHtml.Length; index++)
+	{
+		var hintHtml = slide.HintsHtml[index];
+		var id = "hint" + index;
+		<div id="@id" data-url="@Url.Action("AddHint")" style="display:none">
+			@if (index == 0)
+			{
+				<h4>Подсказки:</h4>
+			}
+			<button id="@(index+"likeHint")"
+					class="like-left-location btn btn-xs like-button @(slide.LikedHints.Contains(index) ? "btn-primary" : "btn-default")" 
+					data-url="@Url.Action("LikeHint")"
+					onclick="likeHint('@Model.Course.Id', '@Model.Slide.Id', '@index')"
+					title="Подсказка помогла!"><i class="glyphicon glyphicon-thumbs-up"></i></button>
+				@Html.Raw(hintHtml)
 		</div>
-	</div>
-}
-    <div id="currentHint" style="display:none">-1</div>
+	}
+	<div id="currentHint" style="display:none">-1</div>
 	<script src="~/Scripts/slide-hints.js"></script>
 	<script src="~/Scripts/jquery-1.10.2.min.js"></script>
 	<script>getHints("@Model.Course.Id", "@Model.Slide.Id")</script>
