More pretty side-bar hidden, thumbs up now is heart in hints, good answer when SphEng is down.

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -184,6 +184,12 @@ a.nav-arrow:hover {
     margin-left: 320px;
 }
 
+@media (max-width: 700px) {
+	.slide-container {
+		margin-left: 10px;
+	}
+}
+
 .ask-bar {
     max-width: none;
     width: 100%;
