--- a/src/uLearn.Web/Views/Course/_ExerciseHints.cshtml
+++ b/src/uLearn.Web/Views/Course/_ExerciseHints.cshtml
@@ -10,7 +10,7 @@
 		@{ var intro = index == 0 ? "Подсказки:" : "";}
 		<h4>@intro</h4>
 		<button id="@(index+"likeHint")" class="like-left-location btn like-button @(slide.LikedHints.Contains(index) ? "btn-primary" : "btn-default")" data-url="@Url.Action("LikeHint")" onclick="likeHint('@Model.Course.Id', '@Model.Slide.Id', '@index')">
-			<i class="glyphicon glyphicon-thumbs-up"></i>
+			<i class="glyphicon glyphicon-heart"></i>
 		</button>
 		<div>
 			<li style="margin-bottom: 20px">@Html.Raw(hintHtml)</li>
