--- a/src/uLearn.Web/Views/Shared/_TableOfContents.cshtml
+++ b/src/uLearn.Web/Views/Shared/_TableOfContents.cshtml
@@ -2,7 +2,7 @@
 @using uLearn
 @model CoursePageModel
  
-<ul class="side-bar units-list">
+<ul class="side-bar units-list navbar-collapse collapse nav navbar-nav container">
 	@{
 		int index = 0;
 		int groupNumber = 0;
