uncompilateble project for Ivan

--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -64,5 +64,6 @@
 	<script src="~/Scripts/slide-stats.js"></script>
 	<script>
 		fillRate('@Model.Rate');
+		getHints("@Model.Course.Id", "@Model.Slide.Id");
 	</script>
 }
