--- a/src/uLearn.Web/Views/Course/_Quiz.cshtml
+++ b/src/uLearn.Web/Views/Course/_Quiz.cshtml
@@ -6,7 +6,7 @@
 @if (QuizSlide != null)
 {
 	var passed = Model.PassedQuiz.Contains(QuizSlide.Id);
-	var rightAnswersStr = new StringBuilder();
+	//var rightAnswersStr = new StringBuilder();
 	for (int blockIndex = 0; blockIndex < QuizSlide.Quiz.Blocks.Length; blockIndex++)
 	{
 		var quizBlock = QuizSlide.Quiz.Blocks[blockIndex];
@@ -29,9 +29,9 @@
 		if (quizBlock is ChoiceBlock)
 		{
 			var choiceQuizBlock = quizBlock as ChoiceBlock;
-			rightAnswersStr.Append(quizBlock.Id + "quizBlock" + "=");
-			rightAnswersStr.Append(string.Join("*", choiceQuizBlock.Items.Where(x => x.IsCorrect).Select(x => x.Id).ToList()));
-			rightAnswersStr.Append("||");
+			//rightAnswersStr.Append(quizBlock.Id + "quizBlock" + "=");
+			//rightAnswersStr.Append(string.Join("*", choiceQuizBlock.Items.Where(x => x.IsCorrect).Select(x => x.Id).ToList()));
+			//rightAnswersStr.Append("||");
 			var isMultiply = choiceQuizBlock.Multiple;
 			var typeInp = isMultiply ? "checkbox" : "radio";
 			<div class="quiz-block-mark @typeInp" id='@(quizBlock.Id + "_quizBlock")'>
@@ -63,8 +63,8 @@
 				quizResSample = Model.AnswersToQuizes[quizBlock.Id][1] == "False" ? "block" : "none";
 			}
 			var fillIn = quizBlock as FillInBlock;
-			rightAnswersStr.Append(quizBlock.Id + quizBlock.Id + "=" + fillIn.Sample);
-			rightAnswersStr.Append("||");
+			//rightAnswersStr.Append(quizBlock.Id + quizBlock.Id + "=" + fillIn.Sample);
+			//rightAnswersStr.Append("||");
 			var sample = fillIn.Sample;
 			<div class="quiz quiz-block-input">
 				<label>
@@ -77,9 +77,9 @@
 		}
 		else if (quizBlock is IsTrueBlock)
 		{
-			var selecter = quizBlock as IsTrueBlock;
-			rightAnswersStr.Append(quizBlock.Id + "quizBlock" + "=" + selecter.Answer);
-			rightAnswersStr.Append("||");
+			//var selecter = quizBlock as IsTrueBlock;
+			//rightAnswersStr.Append(quizBlock.Id + "quizBlock" + "=" + selecter.Answer);
+			//rightAnswersStr.Append("||");
 			var tchecked = "";
 			var fchecked = "";
 			if (passed && Model.AnswersToQuizes[quizBlock.Id].FirstOrDefault() != null)
